--- a/myapp/social_auth/templates/social_auth/list_friends.html
+++ b/myapp/social_auth/templates/social_auth/list_friends.html
@@ -7,13 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <a href="/login/vk-oauth2?display=popup"
-      ><img
-        src="/static/lvk.png"
-        class="avatar-3"
-        data-toggle="tooltip"
-        title="auth"
-    /></a>
+    <h3>{{ response }}</h3>
   </body>
 </html>
