--- a/myapp/static/style.css
+++ b/myapp/static/style.css
@@ -3,6 +3,18 @@
     padding: 0;
 }
 
+.body {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    transition: 1s;
+}
+
+.body.light {
+    background-color: #fff;
+}
+
 .card__image {
     border-radius: 50%;
 }
@@ -17,6 +29,10 @@
     font-size: 40px;
 }
 
+.body.light .user__name {
+    color: black;
+}
+
 .user__img {
     border-radius: 50%;
     margin-top: 10px;
@@ -28,13 +44,16 @@ body {
   }
 
 .container {
-    margin-top: 250px;
-    position: absolute;
+    margin-top: 100px;
+    justify-content: center;
     height: 300px;
-    width: 600px;
     top: 60px;
     left: calc(50% - 400px);
     display: flex;
+}
+
+.general-wrapper__button {
+    margin: 30px auto 0;
 }
 
 .button {
@@ -61,6 +80,14 @@ body {
     justify-content: center;
     height: 100vh;
     align-items: center;
+}
+
+.card.light {
+    background-color: #fff;
+}
+
+.card.light .title {
+    color: #000;
 }
 
 .card {
@@ -139,4 +166,42 @@ body {
     position: absolute;
     top: 150px;
     left: calc(50% - 60px);
+}
+
+
+
+
+input[type="checkbox"] {
+    cursor: pointer;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    width: 50px;
+    height: 25px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: #c6c6c6;
+    outline: none;
+    border-radius: 50px;
+    box-shadow: inset 0 0 5px rgba(0,0,0, .2);
+    transition: 0.5s;
+}
+input:checked[type="checkbox"] {
+    background: #02a9f4;
+}
+input[type="checkbox"]::before {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    top: 0;
+    left: 0;
+    background: #fff;
+    transform: scale(1.1);
+    box-shadow: 0 2px 5px rgba(0,0,0, .2);
+    transition: 0.2s;
+}
+input:checked[type="checkbox"]::before {
+    left: 25px;
 }
