--- a/myapp/static/style.css
+++ b/myapp/static/style.css
@@ -7,12 +7,12 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    padding: 10px 0;
     transition: 1s;
 }
 
 .body.light {
-    background-color: #fff;
+    background-color: rgb(255, 255, 255);
 }
 
 .card__image {
@@ -21,7 +21,7 @@
 
 .user {
     text-align: center;
-    color: white;
+    color: #B8B8B8;
     margin-top: 50px;
 }
 
@@ -60,7 +60,7 @@ body {
     align-items: center;
     justify-content: center;
     display: flex;
-    color: white;
+    color: #B8B8B8;
     height: 80px;
     text-decoration: none;
     width: 227px;
@@ -68,6 +68,13 @@ body {
     border-radius: 10px;
     box-shadow: -1rem 0 3rem #000;
     transition: 0.4s ease-out;
+}
+
+.body.light .button {
+    box-shadow: none;
+    color: #100e17;
+    background-color: #fff;
+    border: 1.5px solid #ddd; 
 }
 
 .button:hover {
@@ -84,6 +91,8 @@ body {
 
 .card.light {
     background-color: #fff;
+    box-shadow: none;
+    border: 1px solid #ddd;
 }
 
 .card.light .title {
@@ -101,6 +110,7 @@ body {
     position: relative;
     left: 0px;
 }
+
 
 .card:not(:first-child) {
     margin-left: -50px;
@@ -125,7 +135,7 @@ body {
 }
 
 .title {
-    color: white;
+    color: #B8B8B8;
     font-weight: 300;
     position: absolute;
     left: 20px;
@@ -139,6 +149,7 @@ body {
     height: 5px;
     width: 150px;
 }
+
 
 .emptybar {
     background-color: #2e3033;
@@ -156,6 +167,7 @@ body {
     background: linear-gradient(90deg, rgba(0,154,217,1) 0%, rgba(217,147,0,1) 65%, rgba(255,186,0,1) 100%);
     transition: 0.6s ease-out;
 }
+
 
 .card:hover .filledbar {
     width: 120px;
@@ -186,9 +198,11 @@ input[type="checkbox"] {
     box-shadow: inset 0 0 5px rgba(0,0,0, .2);
     transition: 0.5s;
 }
+
 input:checked[type="checkbox"] {
     background: #02a9f4;
 }
+
 input[type="checkbox"]::before {
     content: '';
     position: absolute;
@@ -202,6 +216,7 @@ input[type="checkbox"]::before {
     box-shadow: 0 2px 5px rgba(0,0,0, .2);
     transition: 0.2s;
 }
+
 input:checked[type="checkbox"]::before {
     left: 25px;
 }
