--- a/myapp/social_auth/templates/social_auth/started_screen.html
+++ b/myapp/social_auth/templates/social_auth/started_screen.html
@@ -2,10 +2,10 @@
 {% load static %}
 {% block title %}Вход{% endblock %}
 
-{% block content %} 
+{% block content %}
 <div class="button-wrapper">
-    <a class="button" href="/login/vk-oauth2"><h1>ВОЙТИ</h1></a>
+    <a class="button" href="/login/vk-oauth2">
+        <h1>ВОЙТИ</h1>
+    </a>
 </div>
 {% endblock content %}
-
-
